# flutter_native_channel

./: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt  channel.cc  concurrent_channel.cc  finalizer.cc  finalizer.h  jni_helper.cc  jni_helper.h  synchronized_channel.cc  synchronous_channel.cc
android/src/main/kotlin/io/xdea/flutter_native_channel/: ConcurrentMethodChannel.kt  ConcurrentNativeBinaryMessenger.kt  FlutterNativeChannelPlugin.kt  NativeBinaryMessenger.kt  NativeMethodChannel.kt  SynchronizedBinaryMessageHandler.kt  SynchronizedMethodChannel.kt  SynchronizedNativeBinaryMessenger.kt  SynchronizedResult.kt  SynchronousBinaryMessageHandler.kt  SynchronousMethodChannel.kt  SynchronousNativeBinaryMessenger.kt  SynchronousResult.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/io/xdea/flutter_native_channel_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
lib/: flutter_native_channel.dart
lib/src/: common.dart  concurrent_method_channel.dart  concurrent_native_binary_messenger.dart  dynamic_library.dart  native_binary_channel.dart  native_binary_messenger.dart  native_method_channel.dart  synchronous_method_channel.dart  synchronous_native_binary_messenger.dart
